--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </form>
           </div>
 
-          <div class="row row-cols-2 row-cols-md-4 g-3 p-3 " id="show-card">
+          <div class="row row-cols-2 row-cols-md-4 g-3 " id="show-card">
 
           </div>
           
